# bloggy-rs

./: .gitignore  Cargo.toml  LICENSE
example/: simple_blog.yaml
src/: api.rs  blog_crd.yaml  crdgen.rs  lib.rs  main.rs  manager.rs  markdown.rs
